# rust-sorts

./: .gitignore  Cargo.toml  Criterion.toml  README.md  criterion.toml
benches/: all-languages-bench.rs
benchmarking/: Cargo.toml
benchmarking/benches/: burstsort-alphanumeric.rs  burstsort-bench.rs  burstsort-random.rs  burstsort-realistic.rs
benchmarking/src/: lib.rs
burstsort/: Cargo.toml
burstsort/benches/: burstsort-jemalloc-fight.rs  burstsort-malloc-fight.rs  burstsort-tcmalloc-fight.rs  burstsort-tuning.rs
burstsort/src/: alphanumeric.rs  benching.rs  byte.rs  lib.rs  sorts.rs  tabular.rs  tests.rs  trie.rs  unicode.rs
burstsort/src/alphanumeric/: alpha_table.rs  mod.rs
criterion-reports/reports/: index.html
criterion-reports/reports/jemalloc-compare-encoding-ascii-alpha/: index.html
criterion-reports/reports/jemalloc-compare-encoding-ascii-alpha/burstsort/: index.html
criterion-reports/reports/jemalloc-compare-encoding-ascii-alpha/burstsort-long/: index.html
criterion-reports/reports/jemalloc-compare-encoding-ascii-alpha/par-burstsort/: history.html  index.html
criterion-reports/reports/jemalloc-compare-encoding-ascii-alpha/par-burstsort-long/: history.html  index.html
criterion-reports/reports/jemalloc-compare-encoding-ascii-alpha/rayon-par-stable/: index.html
criterion-reports/reports/jemalloc-compare-encoding-ascii-alpha/rayon-par-unstable/: index.html
criterion-reports/reports/jemalloc-compare-encoding-ascii-alpha/std-stable/: index.html
criterion-reports/reports/jemalloc-compare-encoding-ascii-alpha/std-unstable/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/100000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1000000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1025000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1050000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1075000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1100000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1125000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1150000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1175000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1200000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1225000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/125000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1250000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1275000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1300000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1325000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1350000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1375000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1400000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1425000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1450000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1475000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/150000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1500000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1525000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1550000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1575000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1600000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1625000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1650000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1675000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1700000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1725000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/175000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1750000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1775000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1800000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1825000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1850000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1875000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1900000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1925000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1950000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/1975000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/200000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/2000000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-count/225000/: index.html
criterion-reports/reports/jemalloc-compare-random-by-length/: index.html
criterion-reports/reports/system-compare-random-by-length/: index.html
criterion-reports/reports/tcmalloc-compare-encoding-ascii-alpha/: index.html
criterion-reports/reports/tcmalloc-compare-random-by-count/: index.html
criterion-reports/reports/tcmalloc-compare-random-by-length/: index.html
scripts/: profile.sh
src/: benchmarking.rs  bucket.rs  burst_trie.rs  insertion.rs  lib.rs  string.rs
src/burst_trie/: dynamic.rs  mod.rs  tabular.rs
(+3817 files in other folders)
