[package]
name = "sorting"
version = "0.1.0"
edition = "2018"

###################################################################################################
# PROFILE
###################################################################################################
[profile.release]
lto = "fat"
codegen-units = 1

###################################################################################################
# FEATURES
###################################################################################################

[features]
benchmarking = ["rand", "jemallocator", "unicode-segmentation"]

###################################################################################################
# DEPENDENCIES
###################################################################################################

[dependencies]

###################################################################################################
# OPTIONAL DEPENDENCIES
###################################################################################################

[dependencies.rand]
version = "^0.8.0"
optional = true

[dependencies.unicode-segmentation]
version = "^1.8.0"
optional = true

[target.'cfg(not(target_env = "msvc"))'.dependencies.jemallocator]
version = "^0.3.2"
optional = true

###################################################################################################
# DEV-DEPENDENCIES
###################################################################################################

[dev-dependencies]
quickcheck = "^1.0"
quickcheck_macros = "^1.0"

###################################################################################################
# BINARIES
###################################################################################################

[[bin]]
name = "bench_all_str"
required-features = ["benchmarking"]

[[bin]]
name = "shakespeare"
required-features = ["benchmarking"]

[[bin]]
name = "all-languages"
required-features = ["benchmarking"]

[[bin]]
name = "arabic"
required-features = ["benchmarking"]

[[bin]]
name = "english"
required-features = ["benchmarking"]