[package]
name = "sorting"
version = "0.1.0"
edition = "2018"

###################################################################################################
# PROFILE
###################################################################################################
[profile.release]
lto = "fat"
codegen-units = 1

###################################################################################################
# FEATURES
###################################################################################################
[features]
benchmarking = ["rand", "unicode-segmentation"]

###################################################################################################
# DEPENDENCIES
###################################################################################################
[dependencies]

###################################################################################################
# OPTIONAL DEPENDENCIES
###################################################################################################
[dependencies.rand]
version = "^0.8.0"
optional = true

[dependencies.unicode-segmentation]
version = "^1.8.0"
optional = true

###################################################################################################
# DEV-DEPENDENCIES
###################################################################################################
[dev-dependencies]
quickcheck = "^1.0"
quickcheck_macros = "^1.0"
criterion = "^0.3"
tcmalloc = "^0.3"

###################################################################################################
# BENCHES
###################################################################################################
[[bench]]
name = "all-languages-bench"
required-features = ["benchmarking"]
harness = false