[package]
name = "benchmarking"
version = "0.1.0"
edition = "2018"

###################################################################################################
# Dependencies
###################################################################################################
[dependencies]
criterion = "^0.3"
rand = "^0.8.4"
unicode-segmentation = "^1.8.0"

###################################################################################################
# Internal Dependencies
###################################################################################################
[dependencies.burstsort]
path = "../burstsort"

###################################################################################################
# Dev Dependencies
###################################################################################################
[dev-dependencies]
tcmalloc = "^0.3"

###################################################################################################
# BENCHES
###################################################################################################
[[bench]]
name = "burstsort-bench"
required-features = ["benchmarking"]
harness = false