[package]
name = "internal-benchmarking"
version = "0.1.0"
edition = "2018"

###################################################################################################
# Dependencies
###################################################################################################
[dependencies]
criterion = "^0.3"
rand = "^0.8.4"
unicode-segmentation = "^1.8.0"

###################################################################################################
# Internal Dependencies
###################################################################################################
[dependencies.burstsort]
path = "../burstsort"
features = ["unstable"]

###################################################################################################
# Dev Dependencies
###################################################################################################
[dev-dependencies]
tcmalloc = "^0.3"

###################################################################################################
# BENCHES
###################################################################################################
[[bench]]
name = "burstsort-realistic"
harness = false

[[bench]]
name = "burstsort-random"
harness = false