[package]
name = "burstsort"
version = "0.1.0"
edition = "2018"

###################################################################################################
# FEATURES
###################################################################################################
[features]

###################################################################################################
# DEPENDENCIES
###################################################################################################
[dependencies]
array-init = "^2.0.0"

###################################################################################################
# OPTIONAL DEPENDENCIES
###################################################################################################


###################################################################################################
# DEV-DEPENDENCIES
###################################################################################################
[dev-dependencies]
quickcheck = "^1.0"
quickcheck_macros = "^1.0"
unicode-segmentation = "^1.8.0"
pretty_assertions = "^0.7.2"