[package]
name = "burstsort"
version = "0.1.0"
edition = "2018"

[features]
_benchmarking = ["unicode-segmentation", "rand", "criterion"]

###################################################################################################
# Dependencies
###################################################################################################
[dependencies]

###################################################################################################
# Bench Dependencies
###################################################################################################
[dependencies.criterion]
version = "0.3.5"
optional = true

[dependencies.rand]
version = "0.8.4"
optional = true

[dependencies.tcmalloc]
version = "0.3.0"
optional = true

[dependencies.unicode-segmentation]
version = "1.8.0"
optional = true

###################################################################################################
# Dev Dependencies
###################################################################################################
[dev-dependencies]
quickcheck = "^1.0.3"
quickcheck_macros = "^1.0.0"

###################################################################################################
# BENCHES
###################################################################################################
[[bench]]
name = "burstsort-tcmalloc-fight"
required-features = ["_benchmarking", "tcmalloc"]
harness = false

[[bench]]
name = "burstsort-malloc-fight"
required-features = ["_benchmarking"]
harness = false

[[bench]]
name = "burstsort-tuning"
required-features = ["_benchmarking", "tcmalloc"]
harness = false